Commit for Home Page and Privacy Page

--- a/public/privacy-policy.html
+++ b/public/privacy-policy.html
@@ -42,83 +42,76 @@
 <div class="container">
   <h1>Privacy Policy for PicPlate</h1>
   <p><strong>Effective Date:</strong> April 7, 2025</p>
-  <p><strong>Last Updated:</strong> April 7, 2025</p>
+  <p><strong>Last Updated:</strong> April 15, 2025</p>
 
   <h2>1. Introduction</h2>
-  <p>Welcome to <strong>PicPlate – AI-Powered Mood-Based Recipe & Restaurant Recommender</strong>. This Privacy Policy explains how we collect, use, store, and protect your information when you access and use our Single Page Application (SPA). Please read this policy carefully. By using our application, you agree to the terms described herein.</p>
-  <p><em>Note:</em> PicPlate is an independent service and is not affiliated with or endorsed by Pinterest. When you connect your Pinterest account, your data is used solely for the functionality provided by this app and is handled in accordance with this Privacy Policy.</p>
+  <p>Welcome to <strong>PicPlate – AI-Powered Mood-Based Recipe & Restaurant Recommender</strong>. We respect your privacy and are committed to protecting your personal data. This Privacy Policy explains how we collect, use, and protect information when you use our single-page application.</p>
+  <p><em>Note:</em> PicPlate is an independent tool and is not affiliated with, endorsed, or sponsored by Pinterest. Any data accessed through a Pinterest account is used strictly with user consent and only for real-time, in-session analysis. We do not store, retain, or share Pinterest data.</p>
 
-  <h2>2. Data We Collect</h2>
+  <h2>2. What Data We Collect</h2>
   <h3>2.1 Information You Provide</h3>
   <ul>
-    <li><strong>Authentication Data:</strong> When you log in via Google or email, we collect basic account information (e.g., name, email address) to create and manage your user account.</li>
-    <li><strong>Pinterest Data:</strong> If you choose to connect your Pinterest account, we retrieve images solely for analysis. We do not store your Pinterest credentials.</li>
-    <li><strong>Uploaded Images:</strong> Images that you select and upload from Pinterest are processed in real time for image analysis. These images are not stored permanently.</li>
+    <li><strong>Login Information:</strong> If you log in using Google or email, we collect basic data such as name and email to manage your account.</li>
+    <li><strong>Optional Pinterest Access:</strong> If you choose to connect your Pinterest account, you may select specific images for analysis. We do not collect or store your login credentials.</li>
   </ul>
 
-  <h3>2.2 Data Processed by APIs</h3>
+  <h3>2.2 Image and Mood Analysis</h3>
   <ul>
-    <li><strong>Google Vision API:</strong> Analyzes uploaded images to detect faces, emotions, and dominant colors. Faces are automatically blurred to protect privacy.</li>
-    <li><strong>Google Gemini API:</strong> Uses the processed image data (emotion/color analysis) and your location to suggest mood-based healthy recipes and nearby healthy restaurants, including generating food images.</li>
+    <li><strong>Google Vision API:</strong> Analyzes selected images to detect color tones and emotional cues.</li>
+    <li><strong>Google Gemini API:</strong> Uses processed image data and your location to generate food suggestions and restaurant recommendations.</li>
   </ul>
 
-  <h3>2.3 Usage Data</h3>
+  <h3>2.3 Optional User Preferences</h3>
   <ul>
-    <li><strong>User Preferences and Logs:</strong> We store your search logs, analysis results, Gemini recommendations, and user preferences in Google Firestore to enhance your experience and provide personalized suggestions.</li>
+    <li>We store non-Pinterest data such as dietary preferences and Gemini-generated results in Google Firestore.</li>
   </ul>
 
   <h2>3. How We Use Your Data</h2>
   <ul>
-    <li><strong>Image Analysis:</strong> To analyze uploaded images for mood and color information, enabling us to offer healthy recipe and restaurant recommendations.</li>
-    <li><strong>Personalization:</strong> To tailor suggestions based on your uploaded content, location, and user preferences.</li>
-    <li><strong>Service Improvement:</strong> To understand usage patterns and improve app functionality, ensuring a seamless and secure user experience.</li>
-    <li><strong>Communication:</strong> To provide support, send important updates, and respond to your inquiries.</li>
+    <li>To personalize your experience with recipe and restaurant recommendations.</li>
+    <li>To improve our services based on usage patterns and preferences.</li>
+    <li>To maintain app functionality and provide relevant updates.</li>
   </ul>
 
   <h2>4. Third-Party Services</h2>
-  <p>We rely on trusted third-party services to operate our application:</p>
   <ul>
-    <li><strong>Google Vision API:</strong> Processes images to detect faces, emotions, and colors. Note that detected faces are blurred for your privacy.</li>
-    <li><strong>Google Gemini API:</strong> Generates recipe suggestions and restaurant recommendations based on processed image data and user location.</li>
-    <li><strong>Google Firestore:</strong> Securely stores user logs and preferences.</li>
-  </ul>
-  <p>These third-party services have their own privacy policies which you are encouraged to review.</p>
-
-  <h2>5. Data Storage and Security</h2>
-  <ul>
-    <li><strong>Data Storage:</strong> User data (such as search logs and recommendations) is stored in Google Firestore. Uploaded images are processed and then not retained beyond what is necessary for immediate analysis.</li>
-    <li><strong>Data Security:</strong> We implement industry-standard security measures to protect your data from unauthorized access, alteration, disclosure, or destruction. Our infrastructure is regularly monitored and updated to ensure data integrity and confidentiality.</li>
-    <li><strong>Data Retention:</strong> We retain user data only as long as necessary for the purposes described in this policy. You may request deletion of your data at any time as outlined in Section 7.</li>
+    <li><strong>Google Vision API:</strong> For image mood and color detection.</li>
+    <li><strong>Google Gemini API:</strong> For personalized suggestions.</li>
+    <li><strong>Google Firestore:</strong> For secure storage of user settings and logs (excluding Pinterest data).</li>
   </ul>
 
-  <h2>6. Sharing and Disclosure of Information</h2>
+  <h2>5. Data Protection & Retention</h2>
   <ul>
-    <li><strong>Third-Party Disclosure:</strong> We do not sell, trade, or otherwise transfer your personal data to third parties except as necessary to provide our service or as required by law.</li>
-    <li><strong>Pinterest Data:</strong> Images retrieved from Pinterest are used exclusively for in-app analysis. We do not share your Pinterest data with any unauthorized third parties.</li>
-    <li><strong>Legal Requirements:</strong> We may disclose information if required by law or in response to a valid request from public authorities.</li>
+    <li><strong>Pinterest Images:</strong> Not stored. Used temporarily for in-session analysis only.</li>
+    <li><strong>Stored Data:</strong> Limited to non-sensitive, voluntarily shared preferences.</li>
+    <li><strong>Security:</strong> We use industry-standard practices to keep your data safe.</li>
   </ul>
 
-  <h2>7. Your Rights and Choices</h2>
+  <h2>6. Sharing and Disclosure</h2>
   <ul>
-    <li><strong>Access and Correction:</strong> You have the right to access and correct any personal data we hold about you.</li>
-    <li><strong>Data Deletion:</strong> You may request that we delete your data at any time. Upon request, we will promptly remove your personal information from our databases.</li>
-    <li><strong>Opt-Out:</strong> You may disconnect your Pinterest account or opt-out of certain data collection practices via your account settings.</li>
-    <li><strong>Contact Us:</strong> For any questions, requests, or concerns about your data, please contact us at <a href="mailto:abhate@horizon.csueastbay.edu">abhate@horizon.csueastbay.edu</a>.</li>
+    <li>We do not share or sell user data.</li>
+    <li>We do not retain or disclose Pinterest data.</li>
+    <li>We may disclose data only if legally required.</li>
   </ul>
 
-  <h2>8. Cookies and Similar Technologies</h2>
-  <p>While our application primarily uses API-based interactions, we may use cookies and similar technologies to enhance your experience and maintain your session. You can manage your cookie preferences through your browser settings.</p>
+  <h2>7. Your Rights</h2>
+  <ul>
+    <li>You may request access to or deletion of your stored data.</li>
+    <li>You may disconnect Pinterest at any time.</li>
+    <li>Email <a href="mailto:abhate@horizon.csueastbay.edu">abhate@horizon.csueastbay.edu</a> for requests.</li>
+  </ul>
 
-  <h2>9. Changes to This Privacy Policy</h2>
-  <p>We may update our Privacy Policy from time to time. Any changes will be posted on this page with an updated “Last Updated” date. We encourage you to review this policy periodically to stay informed about how we protect your information.</p>
+  <h2>8. Cookies</h2>
+  <p>We use minimal cookies to manage your session. No third-party tracking is involved.</p>
 
-  <h2>10. Contact Information</h2>
-  <p>If you have any questions or concerns regarding this Privacy Policy or our data practices, please contact us at:</p>
-  <p>
-    <strong>Email:</strong> <a href="mailto:abhate@horizon.csueastbay.edu">abhate@horizon.csueastbay.edu</a><br>
-  </p>
+  <h2>9. Updates</h2>
+  <p>This Privacy Policy may be updated periodically. Please review it regularly for changes.</p>
 
-  <p>By using PicPlate, you acknowledge that you have read and understood this Privacy Policy and agree to the collection and use of your information as described. Thank you for trusting us with your data. Enjoy your experience with PicPlate!</p>
+  <h2>10. Contact Us</h2>
+  <p>If you have questions, contact us at:</p>
+  <p><strong>Email:</strong> <a href="mailto:abhate@horizon.csueastbay.edu">abhate@horizon.csueastbay.edu</a></p>
+
+  <p>By using PicPlate, you acknowledge that you have read and understood this Privacy Policy. Thank you for trusting us.</p>
 </div>
 </body>
 </html>
