Changes done to add logo and project name everywhere and updated privacy policy

--- a/picplate-frontend/public/privacy-policy.html
+++ b/picplate-frontend/public/privacy-policy.html
@@ -42,76 +42,76 @@
 <div class="container">
   <h1>Privacy Policy for PicPlate</h1>
   <p><strong>Effective Date:</strong> April 7, 2025</p>
-  <p><strong>Last Updated:</strong> April 15, 2025</p>
+  <p><strong>Last Updated:</strong> April 26, 2025</p>
 
   <h2>1. Introduction</h2>
   <p>Welcome to <strong>PicPlate – AI-Powered Mood-Based Recipe & Restaurant Recommender</strong>. We respect your privacy and are committed to protecting your personal data. This Privacy Policy explains how we collect, use, and protect information when you use our single-page application.</p>
-  <p><em>Note:</em> PicPlate is an independent tool and is not affiliated with, endorsed, or sponsored by Pinterest. Any data accessed through a Pinterest account is used strictly with user consent and only for real-time, in-session analysis. We do not store, retain, or share Pinterest data.</p>
+  <p><em>Note:</em> PicPlate is an independent tool and is not affiliated with, endorsed, or sponsored by Google Photos. We only access your Google Photos with your explicit permission, and solely for the purpose of analyzing selected images. We do not store your entire Google Photos library.</p>
 
   <h2>2. What Data We Collect</h2>
   <h3>2.1 Information You Provide</h3>
   <ul>
-    <li><strong>Login Information:</strong> If you log in using Google or email, we collect basic data such as name and email to manage your account.</li>
-    <li><strong>Optional Pinterest Access:</strong> If you choose to connect your Pinterest account, you may select specific images for analysis. We do not collect or store your login credentials.</li>
+    <li><strong>Login Information:</strong> When you sign in with Google, we collect basic information such as your name, email address, and profile picture to personalize your experience.</li>
   </ul>
 
   <h3>2.2 Image and Mood Analysis</h3>
   <ul>
-    <li><strong>Google Vision API:</strong> Analyzes selected images to detect color tones and emotional cues.</li>
+    <li><strong>Google Photos Access:</strong> We access only the photos you select, not your entire photo library.</li>
+    <li><strong>Google Vision API:</strong> Analyzes selected photos to detect color tones and emotional cues.</li>
     <li><strong>Google Gemini API:</strong> Uses processed image data and your location to generate food suggestions and restaurant recommendations.</li>
   </ul>
 
   <h3>2.3 Optional User Preferences</h3>
   <ul>
-    <li>We store non-Pinterest data such as dietary preferences and Gemini-generated results in Google Firestore.</li>
+    <li>We store non-sensitive information such as food preferences, generated recipes, and saved history entries in Google Firestore.</li>
   </ul>
 
   <h2>3. How We Use Your Data</h2>
   <ul>
     <li>To personalize your experience with recipe and restaurant recommendations.</li>
-    <li>To improve our services based on usage patterns and preferences.</li>
-    <li>To maintain app functionality and provide relevant updates.</li>
+    <li>To improve our services based on user preferences and feedback.</li>
+    <li>To maintain app functionality and deliver relevant updates.</li>
   </ul>
 
   <h2>4. Third-Party Services</h2>
   <ul>
-    <li><strong>Google Vision API:</strong> For image mood and color detection.</li>
-    <li><strong>Google Gemini API:</strong> For personalized suggestions.</li>
-    <li><strong>Google Firestore:</strong> For secure storage of user settings and logs (excluding Pinterest data).</li>
+    <li><strong>Google Vision API:</strong> For image analysis.</li>
+    <li><strong>Google Gemini API:</strong> For recipe and restaurant generation.</li>
+    <li><strong>Google Firestore:</strong> For secure storage of user preferences and search history.</li>
   </ul>
 
   <h2>5. Data Protection & Retention</h2>
   <ul>
-    <li><strong>Pinterest Images:</strong> Not stored. Used temporarily for in-session analysis only.</li>
-    <li><strong>Stored Data:</strong> Limited to non-sensitive, voluntarily shared preferences.</li>
-    <li><strong>Security:</strong> We use industry-standard practices to keep your data safe.</li>
+    <li><strong>Google Photos:</strong> We only access photos you explicitly select during your session. We do not retain or permanently store your photo library.</li>
+    <li><strong>Stored Data:</strong> Limited to user preferences and session history.</li>
+    <li><strong>Security:</strong> We use industry-standard encryption and security measures to protect your data.</li>
   </ul>
 
   <h2>6. Sharing and Disclosure</h2>
   <ul>
-    <li>We do not share or sell user data.</li>
-    <li>We do not retain or disclose Pinterest data.</li>
-    <li>We may disclose data only if legally required.</li>
+    <li>We do not sell, share, or rent user data.</li>
+    <li>We do not store or share full Google Photos libraries.</li>
+    <li>We may disclose data only if legally required (e.g., court orders).</li>
   </ul>
 
   <h2>7. Your Rights</h2>
   <ul>
-    <li>You may request access to or deletion of your stored data.</li>
-    <li>You may disconnect Pinterest at any time.</li>
-    <li>Email <a href="mailto:abhate@horizon.csueastbay.edu">abhate@horizon.csueastbay.edu</a> for requests.</li>
+    <li>You may request access to or deletion of your saved search history and profile data at any time.</li>
+    <li>You may disconnect Google Photos access at any time through your account settings.</li>
+    <li>Email <a href="mailto:abhate@horizon.csueastbay.edu">abhate@horizon.csueastbay.edu</a> for any requests.</li>
   </ul>
 
   <h2>8. Cookies</h2>
-  <p>We use minimal cookies to manage your session. No third-party tracking is involved.</p>
+  <p>We use minimal cookies for session management only. No third-party advertising or tracking cookies are used.</p>
 
   <h2>9. Updates</h2>
-  <p>This Privacy Policy may be updated periodically. Please review it regularly for changes.</p>
+  <p>We may update this Privacy Policy from time to time. Updates will be posted here, and your continued use of PicPlate will constitute acceptance of the revised policy.</p>
 
   <h2>10. Contact Us</h2>
-  <p>If you have questions, contact us at:</p>
+  <p>If you have any questions, contact us at:</p>
   <p><strong>Email:</strong> <a href="mailto:abhate@horizon.csueastbay.edu">abhate@horizon.csueastbay.edu</a></p>
 
-  <p>By using PicPlate, you acknowledge that you have read and understood this Privacy Policy. Thank you for trusting us.</p>
+  <p>By using PicPlate, you acknowledge that you have read and understood this Privacy Policy. Thank you for trusting us!</p>
 </div>
 </body>
 </html>
