new homepage changes and updated privacy policy some image deletion which are not required

--- a/picplate-frontend/public/privacy-policy.html
+++ b/picplate-frontend/public/privacy-policy.html
@@ -98,7 +98,7 @@
   <ul>
     <li>You may request access to or deletion of your saved search history and profile data at any time.</li>
     <li>You may disconnect Google Photos access at any time through your account settings.</li>
-    <li>Email <a href="mailto:abhate@horizon.csueastbay.edu">abhate@horizon.csueastbay.edu</a> for any requests.</li>
+    <li>Email <a href="mailto:abhate@horizon.csueastbay.edu">abhate@horizon.csueastbay.edu</a> or <a href="mailto:kvijayaraj@horizon.csueastbay.edu">kvijayaraj@horizon.csueastbay.edu</a>  for any requests.</li>
   </ul>
 
   <h2>8. Cookies</h2>
@@ -110,8 +110,12 @@
   <h2>10. Contact Us</h2>
   <p>If you have any questions, contact us at:</p>
   <p><strong>Email:</strong> <a href="mailto:abhate@horizon.csueastbay.edu">abhate@horizon.csueastbay.edu</a></p>
+  <p><strong>Email:</strong> <a href="mailto:kvijayaraj@horizon.csueastbay.edu">kvijayaraj@horizon.csueastbay.edu</a></p>
 
   <p>By using PicPlate, you acknowledge that you have read and understood this Privacy Policy. Thank you for trusting us!</p>
+  <div class="text-center mt-5">
+    <a href="/" class="btn btn-primary">Back to Home</a>
+  </div>
 </div>
 </body>
 </html>
